# rag-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: __init__.py  document.py  query.py
app/services/: embeddings.py  vector_store.py
