[project]
name = "rag-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.9.0",
    "groq>=0.9.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-groq>=0.1.0",
    "sentence-transformers>=3.0.0", # embeddings local
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]